Fix overflowing Restaurants.

--- a/assets/scss/_panel.scss
+++ b/assets/scss/_panel.scss
@@ -18,17 +18,30 @@
     color: $dark-text-color;
 }
 .panel-title a{
+    display: inline-block;
     font-size: 12px;
+    // width: 238;
+    max-width: 230px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow:hidden;
+    height: 12px;
+}
+.panel-title{
+    height: 12px;
 }
 
 .review-count {
-    min-width: 3em;
-    width: 3em;
+    min-width: 2em;
+    width: 2em;
     display: inline-block;
     text-align: right;
+    font-size: 12px;
+    margin-right: -5px;
 }
 
 .glyphicon-star {
+    font-size: 10px;
     &.half {
         position: relative;
 
@@ -53,11 +66,8 @@
 
 aside {
     background-color: $primary-light-color !important;
-    // height: 100vh;
     box-shadow: 10px 0 5px rgba(#000000, 0.48);
     overflow: scroll;
-    // margin-right: 20px;
-    // margin-left: -30px;
     padding: 10px;
     width: $aside-width;
     position: fixed;
@@ -77,6 +87,14 @@ aside {
         font-size: 12px;
         margin: -3px;
     }
+}
+.rating {
+    float: right;
+    height: 12px;
+}
+.rating .glyphicon {
+    font-size: 12px;
+    // margin: -3px;
 }
 
 .main.row {
