--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,29 +93,42 @@ body, html {
           color: #00051c; }
 
           .panel-title a {
-            font-size: 12px; }
+            display: inline-block;
+            font-size: 12px;
+            max-width: 230px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            height: 12px; }
 
-            .review-count {
-              min-width: 3em;
-              width: 3em;
-              display: inline-block;
-              text-align: right; }
+            .panel-title {
+              height: 12px; }
 
-              .glyphicon-star.half {
-                position: relative; }
-                .glyphicon-star.half:before {
-                  position: relative;
-                  z-index: 9;
-                  width: 47%;
-                  display: block;
-                  overflow: hidden; }
-                  .glyphicon-star.half:after {
-                    content: '';
-                    position: absolute;
-                    z-index: 8;
-                    color: #bdc3c7;
-                    top: 0;
-                    left: 0; }
+              .review-count {
+                min-width: 2em;
+                width: 2em;
+                display: inline-block;
+                text-align: right;
+                font-size: 12px;
+                margin-right: -5px; }
+
+                .glyphicon-star {
+                  font-size: 10px; }
+                  .glyphicon-star.half {
+                    position: relative; }
+                    .glyphicon-star.half:before {
+                      position: relative;
+                      z-index: 9;
+                      width: 47%;
+                      display: block;
+                      overflow: hidden; }
+                      .glyphicon-star.half:after {
+                        content: '';
+                        position: absolute;
+                        z-index: 8;
+                        color: #bdc3c7;
+                        top: 0;
+                        left: 0; }
 
 aside {
   background-color: #cbe0ff !important;
@@ -137,19 +150,26 @@ aside {
           margin: -3px;   }
 }
 
-.main.row {
-  margin-left: 400px; }
+.rating {
+  float: right;
+  height: 12px; }
 
-  h1 {
-    display: inline; }
+  .rating .glyphicon {
+    font-size: 12px; }
 
-    @media screen and (max-width: 993px) {
-      aside {
-        position: fixed;
-        left: -400px;
-        z-index: 10;   }
-        .main {
-          margin-left: 0 !important;   }
+    .main.row {
+      margin-left: 400px; }
+
+      h1 {
+        display: inline; }
+
+        @media screen and (max-width: 993px) {
+          aside {
+            position: fixed;
+            left: -400px;
+            z-index: 10;   }
+            .main {
+              margin-left: 0 !important;   }
 }
 
 .menu-burger {
